<resources>
    <string name="app_name" translatable="false">Japagram</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="EmptyResult" translatable="false"> </string>
    <string name="NoText" translatable="false">""</string>
    <string name="splashscreen_intro_sentence">Your personal aid for deciphering\nthe Japanese language.</string>
    <string name="splashscreen_loading_database">Loading Local Database…</string>
    <string name="splashscreen_should_take_only_a_few_seconds">This should only take a few seconds.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hidden_names_search">Don\'t search names</string>
    <string name="shown_names_search">Search names (requires names database installation)</string>
    <string name="no_complete_with_names">Don\'t search for names if no results are found in the dictionary</string>
    <string name="yes_complete_with_names">Search for names if no results are found in the dictionary</string>
    <string name="hidden_online_search">Don\'t get words and meanings online</string>
    <string name="shown_online_search">Merge online search results with local results</string>
    <string name="use_japanese_font_for_asian_characters">Use Japanese font for Asian characters (Chinese characters used in Japanese will be displayed in Japanese font)</string>
    <string name="wait_for_online_results_off">Display the list immediately when finding results, and refresh it when getting online results.</string>
    <string name="wait_for_online_results_on">Wait for online results before showing the list</string>
    <string name="complete_with_conj_search_off">Don\'t check verb conjugations</string>
    <string name="complete_with_conj_search_on">Add matching verbs after checking conjugations</string>
    <string name="wait_for_all_results_off">Display the list immediately when finding results, and refresh it when finding more results</string>
    <string name="wait_for_all_results_on">Wait for all results before showing the list</string>
    <string name="show_sources_off">Don\'t show extra information on each word</string>
    <string name="show_sources_on">Show extra information (source, common status)</string>
    <string name="show_meanings_EN_off">Don\'t show English meaningsEN in search results</string>
    <string name="show_meanings_EN_on">Show English meaningsEN in search results</string>
    <string name="show_meanings_FR_off">Don\'t show French meaningsEN in search results</string>
    <string name="show_meanings_FR_on">Show French meaningsEN in search results</string>
    <string name="show_meanings_ES_off">Don\'t show Spanish meaningsEN in search results</string>
    <string name="show_meanings_ES_on">Show Spanish meaningsEN in search results</string>
    <string name="hidden_info_boxes">Don\'t show informative popup texts on search</string>
    <string name="shown_info_boxes">Show informative popup texts on search</string>
    <string name="hidden_decomp_structure_info">Don\'t show Kanji structure explanation</string>
    <string name="shown_decomp_structure_info">Show decomposed Kanji structure explanation</string>
    <string name="hidden_only_jap_characters">Show all CJK (Chinese-Japanese-Korean) characters when performing a radical search</string>
    <string name="shown_only_jap_characters">Show only characters used in Japanese when performing a radical search</string>
    <string name="pref_complete_local_with_names_search_key" translatable="false">complete_local_with_names_search</string>
    <string name="pref_search_names_no_matter_what" translatable="false">search_names_no_matter_what</string>
    <string name="pref_complete_local_with_online_search_key" translatable="false">complete_local_with_online_search</string>
    <string name="pref_use_japanese_font_key" translatable="false">use_japanese_font</string>
    <string name="pref_wait_for_online_results_key" translatable="false">wait_for_online_results</string>
    <string name="pref_complete_with_conj_search_key" translatable="false">complete_with_search</string>
    <string name="pref_wait_for_all_results_key" translatable="false">wait_for_results</string>
    <string name="pref_show_sources_key" translatable="false">show_sources</string>
    <string name="pref_show_meanings_EN_key" translatable="false">show_meanings_EN</string>
    <string name="pref_show_meanings_FR_key" translatable="false">show_meanings_FR</string>
    <string name="pref_show_meanings_ES_key" translatable="false">show_meanings_ES</string>
    <string name="pref_show_info_boxes_on_search_key" translatable="false">show_info_boxes_on_search</string>
    <string name="pref_show_decomp_structure_info_key" translatable="false">show_decomp_structure_info</string>
    <string name="pref_show_only_jap_characters_key" translatable="false">show_only_jap_characters</string>
    <string name="pref_show" translatable="false">complete_local_with_online_search</string>
    <string name="complete_local_with_names_search">Search for names</string>
    <string name="complete_with_names">Complete with names</string>
    <string name="complete_local_with_online_search">Search for words online</string>
    <string name="use_japanese_font_in_texts">Use Japanese Font in Texts</string>
    <string name="wait_for_online_results">Wait for online results</string>
    <string name="complete_with_conj_search">Search verb conjugations</string>
    <string name="pref_wait_for_all_results">Wait for all results</string>
    <string name="pref_show_sources">Show Word Info</string>
    <string name="pref_show_meanings_EN">Show English Meanings</string>
    <string name="pref_show_meanings_FR">Show French Meanings</string>
    <string name="pref_show_meanings_ES">Show Spanish Meanings</string>
    <string name="show_info_boxes_when_searching">Show Info Boxes On Search</string>
    <string name="show_decomp_structure_info_text">Show Decomp. Structure Text</string>
    <string name="show_only_jap_characters_text">Show Only Japanese Characters</string>
    <string name="language_label_japanese">Japanese</string>
    <string name="theme_color_label_daybluegreen">Blue-Green, Day</string>
    <string name="theme_color_label_dayredblack">Red-Black, Day</string>
    <string name="theme_color_label_nightpurpleblack">Purple-Black, Night</string>
    <string name="language_label_english">English</string>
    <string name="language_label_french">French</string>
    <string name="language_label_spanish">Spanish</string>
    <string name="pref_app_theme_color_key" translatable="false">app_theme_color</string>
    <string name="pref_app_language_key" translatable="false">app_language</string>
    <string name="pref_app_color_theme">Color Theme</string>
    <string name="pref_app_language">App Language</string>
    <string name="pref_theme_colors_value_daybluegreen" translatable="false">daybluegreen</string>
    <string name="pref_theme_colors_value_dayredblack" translatable="false">dayredblack</string>
    <string name="pref_theme_colors_value_NightPurpleBlack" translatable="false">NightPurpleBlack</string>
    <string name="pref_language_value_japanese" translatable="false">japanese</string>
    <string name="pref_theme_color_value_daybluegreen" translatable="false">daybluegreen</string>
    <string name="pref_theme_color_value_dayredblack" translatable="false">dayredblack</string>
    <string name="pref_theme_color_value_NightPurpleBlack" translatable="false">nightpurpleblack</string>
    <string name="pref_language_value_english" translatable="false">english</string>
    <string name="pref_language_value_french" translatable="false">french</string>
    <string name="pref_language_value_spanish" translatable="false">spanish</string>
    <string name="pref_preferred_STT_language">Speech-To-Text Language</string>
    <string name="pref_preferred_STT_language_key" translatable="false">preferred_STT_result</string>
    <string name="pref_preferred_STT_language_japanese" translatable="false">preferred_STT_language_japanese</string>
    <string name="pref_preferred_TTS_language">Text-To-Speech Language</string>
    <string name="pref_preferred_TTS_language_key" translatable="false">preferred_TTS_result</string>
    <string name="pref_preferred_TTS_language_japanese" translatable="false">preferred_TTS_language_japanese</string>
    <string name="pref_preferred_OCR_language">Recognition Engine Language</string>
    <string name="pref_preferred_OCR_language_key" translatable="false">preferred_OCR_result</string>
    <string name="pref_preferred_OCR_language_japanese" translatable="false">preferred_OCR_language_japanese</string>
    <string name="pref_OCR_image_contrast_key" translatable="false">pref_OCR_image_contrast_key</string>
    <string name="pref_OCR_image_contrast_title">Initial Contrast</string>
    <string name="pref_OCR_image_contrast_min_display_value" translatable="false">0</string>
    <string name="pref_OCR_image_contrast_max_display_value" translatable="false">10</string>
    <string name="pref_OCR_image_contrast_summary" translatable="false">Value: 3</string>
    <string name="pref_OCR_image_contrast_default_value" translatable="false">3</string>
    <string name="pref_OCR_image_contrast_min_value" translatable="false">0</string>
    <string name="pref_OCR_image_contrast_max_value" translatable="false">10</string>
    <string name="pref_OCR_image_contrast_range" translatable="false">100</string>
    <string name="pref_OCR_image_contrast_interval" translatable="false">0.1</string>
    <string name="pref_OCR_image_saturation_key" translatable="false">pref_OCR_image_saturation_key</string>
    <string name="pref_OCR_image_saturation_default_value" translatable="false">0</string>
    <string name="pref_OCR_image_saturation_range" translatable="false">512</string>
    <string name="pref_OCR_image_brightness_default_value" translatable="false">0</string>
    <string name="pref_OCR_image_brightness_range" translatable="false">512</string>
    <string name="transliteration">Kana-Romaji Transliteration</string>
    <string name="conversion_waapuro">Wāpuro:</string>
    <string name="conversion_mod_hepburn">Modif. Hepburn:</string>
    <string name="conversion_nihon_shiki">Nihon-Shiki:</string>
    <string name="conversion_kunrei_shiki">Kunrei-Shiki:</string>
    <string name="ConversionHiragana">Hiragana: </string>
    <string name="ConversionKatakana">Katakana: </string>
    <string name="transliteration_hint">
        \n<b>Important Notes:</b>
        \nUse an apostrophe (\') after \"n\" to ensure its transliteration to \"ん\".
        \n\nThis app uses Wāpuro rōmaji, which allows a one-to-one transliteration between Romaji and Kana words but may lack information on correct pronunciation in Japanese.
        \nThe above Modified Hepburn, Nihon-Shiki and Kunrei-Shiki transliterations, which are designed around Japanese pronunciation, may not be generated correctly in some cases.
        \nFor example, verb conjugations ending in \"おう\" are transliterated to \"ō\"/\"ô\" instead of the correct transliteration \"ou\".</string>
    <string name="loading_central_database">Installing the core dictionary.</string>
    <string name="image_adjustment_hint">The original image has saturation 1.0 (normal colors), contrast 1.0 and brightness 0.
        \nOptimal values for character recognition are around saturation 0 (grayscale), contrast 3.0 and brightness -0.5.
        These are the default settings, but feel free to change them to make the image as clear as possible.
        You can adjust these defaults in the Settings menu.</string>
    <string name="ocr">OCR</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
</resources>